# morphocluster

./: .readthedocs.yaml  docker-compose.default.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: black.yaml
docker/morphocluster/: Dockerfile  activate  config_docker.py  run.sh  supervisord.conf
docs/: conf.py  requirements.txt
migrations/versions/: 02f82c1fb311_.py  03df35632254_.py  0a04bbfe404b_.py  20b499a891eb_.py  309729a37f88_.py  4678451894c9_.py  468d0564d1da_.py  4790ac7b1bf8_.py  51bb55927612_.py  52928669f064_.py  6c1aaca139b1_.py  762c3a983d96_.py  77b9c8eb1df8_.py  8a467c1ab9b5_.py  8de87a72da91_.py  92065c3757f1_.py  a1e953c610cb_.py  aacb0ce28ba6_.py  ac57b043449c_.py  cb0b9c38b9fe_.py  db2a7b29511b_.py  f414d71c50c3_.py  fe6fec6b70a6_.py
morphocluster/: __init__.py  api.py  background.py  classifier.py  cli.py  config_default.py  extensions.py  frontend.py  helpers.py  member.py  models.py  newer_than.py  numpy_json_encoder.py  schemas.py  scripts.py  tree.py
morphocluster/frontend/: package-lock.json  package.json
morphocluster/frontend/public/: index.html
morphocluster/frontend/src/: event-bus.js  main.js  router.js
morphocluster/frontend/src/assets/: styles.css
morphocluster/frontend/src/components/: ClusterModal.vue  DarkModeControl.vue  FeatureModal.vue  FormatModal.vue  JobStatus.vue  UploadZone.vue
morphocluster/frontend/src/helpers/: api.js
morphocluster/frontend/src/views/: Approve.vue  Bisect.vue  BisectContainer.vue  Files.vue  Home.vue  JobQueue.vue  Labeling2.vue  Project.vue  Projects.vue  Upload.vue
morphocluster/processing/: extract_features.py  prototypes.py  recluster.py
morphocluster/sql/: types.py
morphocluster/static/css/: labeling.css  layout.css
morphocluster/templates/layouts/: main.html
server/src/morphocluster/server/: __init__.py  cli.py  schemas.py  tree.py
server/src/morphocluster/server/frontend/: package-lock.json  package.json
server/src/morphocluster/server/frontend/src/views/: Approve.vue
tests/: conftest.py  docker-compose.yml  test_cli.py  test_worker.py
tests/sql/: test_types.py
